--- a/package.json
+++ b/package.json
@@ -1,15 +1,39 @@
 {
-  "name": "next-app",
+  "name": "HowMuchWebPageNext",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build && next export"
   },
   "dependencies": {
-    "next": "9.4.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
+    "moment": "^2.27.0",
+    "next": "^9.4.4",
+    "next-images": "^1.4.0",
+    "numeral": "^2.0.6",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.1.1",
+    "react-chartjs-2": "^2.9.0",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "react-id-swiper": "^4.0.0",
+    "react-lines-ellipsis": "^0.14.1",
+    "react-router-dom": "^5.2.0",
+    "react-slick": "^0.26.1",
+    "styled-components": "^5.1.1",
+    "styled-reset": "^4.2.0",
+    "swiper": "^6.0.2",
+    "webpack": "^4.43.0"
+  },
+  "main": "index.js",
+  "author": "fredkeemhaus <fred@zikto.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
+    "webpack-cli": "^3.3.12"
   }
 }
