--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
+    "i18next": "^19.6.0",
     "moment": "^2.27.0",
     "next": "^9.4.4",
     "next-images": "^1.4.0",
@@ -20,9 +21,11 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.7.0",
     "react-id-swiper": "^4.0.0",
     "react-lines-ellipsis": "^0.14.1",
     "react-router-dom": "^5.2.0",
+    "react-search-input": "^0.11.3",
     "react-slick": "^0.26.1",
     "styled-components": "^5.1.1",
     "styled-reset": "^4.2.0",
