--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
+    "file-loader": "^6.0.0",
     "i18next": "^19.6.0",
     "moment": "^2.27.0",
     "next": "^9.4.4",
     "next-images": "^1.4.0",
+    "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.1.1",
@@ -30,6 +33,7 @@
     "styled-components": "^5.1.1",
     "styled-reset": "^4.2.0",
     "swiper": "^6.0.2",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0"
   },
   "main": "index.js",
