--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export"
+    "export": "rm -rf ./out && next build && next export"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
