--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-images": "^1.4.0",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.1.1",
     "react-chartjs-2": "^2.9.0",
