--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "i18next": "^19.6.0",
     "moment": "^2.27.0",
     "next": "^9.4.4",
+    "next-fonts": "^1.4.0",
     "next-images": "^1.4.0",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
